fix styles on smaller screens

--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -51,6 +51,9 @@ pre {
   max-width: 450px;
   max-height: 450px;
   margin: 0 auto;
+  width: 100%;
+  height: auto;
+  object-fit: contain;;
 }
 
 /* Editing Styles */
